--- a/html/draft/dashboard_01.html
+++ b/html/draft/dashboard_01.html
@@ -232,7 +232,7 @@
             id: index+1,
             start: 'top 45%',
             end: () => `+=${itemCard.clientHeight + 700}`,
-            toggleActions: 'play reverse none none',
+            toggleActions: 'play reverse none reverse',
             toggleClass: {targets: itemCard, className: "open"},
             // markers: true
         })
