--- a/html/draft/dashboard_01.html
+++ b/html/draft/dashboard_01.html
@@ -38,7 +38,7 @@
         <h2>나의 임대물</h2>
     </div>
     <div class="items-main">
-        <div class="item-card main open">
+        <div class="item-card main open full">
             <div class="item-icon-wrap">
                 <div class="item-icon type-01"></div>
                 <span>국민101호</span>
@@ -49,7 +49,7 @@
                 <span class="due-date">매월 24일</span>
             </div>
         </div>
-        <div class="item-card main open">
+        <div class="item-card main open full">
             <div class="item-icon-wrap">
                 <div class="item-icon type-02"></div>
                 <span>국민101호</span>
